# daima

./: .gitignore  CMakeLists.txt  EXPERIMENT_NOTES.md  Food.cpp  Food.h  Game.cpp  Game.h  Input.cpp  Input.h  Point.h  README.md  Renderer.cpp  Renderer.h  SaveSystem.cpp  SaveSystem.h  Snake.cpp  Snake.h  main.cpp
core/: GameLoop.cpp  GameLoop.h  StateMachine.cpp  StateMachine.h
gameplay/: Food.cpp  Food.h  Snake.cpp  Snake.h
persistence/: SaveSystem.cpp  SaveSystem.h
systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TimeSystem.cpp  TimeSystem.h
